--- a/api/data.ipynb
+++ b/api/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,26 +12,35 @@
     "import json\n",
     "from pprint import pprint\n",
     "import pandas as pd\n",
-    "import config"
+    "import config\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-11-11 16:58:42\n",
+      "2020-11-11 16:53:42\n"
+     ]
+    }
+   ],
    "source": [
     "#Get current timestamp\n",
-    "curTime = datetime.datetime.fromtimestamp(\n",
-    "    int(time.time())\n",
-    ").strftime('%Y-%m-%d %H:%M:%S')\n",
-    "\n",
-    "prevTime = (datetime.datetime.now() - datetime.timedelta(minutes=5)).strftime('%Y-%m-%d %H:%M:%S')"
+    "curTime = (datetime.datetime.now() + datetime.timedelta(hours=5)- datetime.timedelta(minutes=15)).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "print(curTime)\n",
+    "prevTime = (datetime.datetime.now() + datetime.timedelta(hours=5) - datetime.timedelta(minutes=20)).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "print(prevTime)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -134,15 +143,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
+       "      <th>99</th>\n",
        "      <td>20699245</td>\n",
        "      <td>20692768-1</td>\n",
        "      <td>12</td>\n",
-       "      <td>2020-11-10 14:30:00Z</td>\n",
+       "      <td>2020-11-11 16:55:00Z</td>\n",
        "      <td>1</td>\n",
-       "      <td>14.768432</td>\n",
+       "      <td>19.484015</td>\n",
        "      <td>°C</td>\n",
-       "      <td>58.583177</td>\n",
+       "      <td>67.071226</td>\n",
        "      <td>°F</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
@@ -153,13 +162,13 @@
       ],
       "text/plain": [
        "   logger_sn   sensor_sn  channel_num             timestamp data_type  \\\n",
-       "71  20699245  20692768-1           12  2020-11-10 14:30:00Z         1   \n",
+       "99  20699245  20692768-1           12  2020-11-11 16:55:00Z         1   \n",
        "\n",
        "     si_value si_unit   us_value us_unit  scaled_value scaled_unit  \n",
-       "71  14.768432      °C  58.583177      °F           0.0        None  "
+       "99  19.484015      °C  67.071226      °F           0.0        None  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +192,7 @@
        "float"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -235,15 +244,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>63</th>\n",
+       "      <th>1</th>\n",
        "      <td>20699245</td>\n",
        "      <td>20684342-1</td>\n",
        "      <td>11</td>\n",
-       "      <td>2020-11-10 14:30:00Z</td>\n",
+       "      <td>2020-11-11 16:45:00Z</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.638497</td>\n",
+       "      <td>12.991962</td>\n",
        "      <td>°C</td>\n",
-       "      <td>51.149295</td>\n",
+       "      <td>55.385531</td>\n",
        "      <td>°F</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
@@ -253,14 +262,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   logger_sn   sensor_sn  channel_num             timestamp data_type  \\\n",
-       "63  20699245  20684342-1           11  2020-11-10 14:30:00Z         1   \n",
+       "  logger_sn   sensor_sn  channel_num             timestamp data_type  \\\n",
+       "1  20699245  20684342-1           11  2020-11-11 16:45:00Z         1   \n",
        "\n",
-       "     si_value si_unit   us_value us_unit  scaled_value scaled_unit  \n",
-       "63  10.638497      °C  51.149295      °F           0.0        None  "
+       "    si_value si_unit   us_value us_unit  scaled_value scaled_unit  \n",
+       "1  12.991962      °C  55.385531      °F           0.0        None  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
